# SysmexCBCTools

./: .gitignore  CITATION.cff  README.md  pyproject.toml
examples/: basic_usage.py  data_B_example.py
examples/data/: README.md
examples/notebooks/: 01_disae2_basic_usage.ipynb  02_disae2_data_B.ipynb  03_disae2_advanced.ipynb  04_data_basic_cleaning.ipynb  05_data_multi_dataset.ipynb  06_data_advanced_config.ipynb  07_transfer_flow_cytometry.ipynb  08_transfer_impedance.ipynb  09_transfer_xnsample.ipynb  10_transfer_config_workflow.ipynb  11_correction_single_covariate.ipynb  12_correction_multi_covariate.ipynb  13_correction_advanced.ipynb  14_correction_tensor_factor_terms.ipynb  1d_transform_dev.ipynb  fcs_conversion.ipynb  gaussian_lineartransformation.ipynb  gmm_dev.ipynb  gmmot_validation.ipynb  loading_dev.ipynb
sysmexcbctools/: __init__.py
sysmexcbctools/correction/: README.md  clinical_clean_INTERVAL.py  requirements.txt
sysmexcbctools/correction/irondeficiency/: _feature_lists_decrypted.py  _feature_lists_export.py  feature_loader.py  flow_gating_pipeline.py  gam_functions.py  metrics.py  ml_model_evaluation.py  ml_model_trainer.py  ml_utils.py  models.py  shape_tracker.py  utils.py
sysmexcbctools/correction/sysmexcorrect/: __init__.py  gam_correction.py  utils.py
sysmexcbctools/data/: MEMORY_OPTIMIZATION_GUIDE.md  README.md  __init__.py  analyse_csv.py  compare_csv.py  config.yaml  process_XN_SAMPLE.py  requirements.txt
sysmexcbctools/data/old_technicalclean/: technical_clean.py  utils.py
sysmexcbctools/data/sysmexclean/: __init__.py  constants.py  memory_optimized.py  processor_api.py  processors.py  sysmex_channels_discrete_columns.py  sysmex_channels_discrete_columns_Cambr.py  utils.py
sysmexcbctools/disae2/: INSTALLATION.md  README.md  model.pkl  requirements.txt
sysmexcbctools/disae2/disae2/: __init__.py  model.py  networks.py  training.py  utils.py
sysmexcbctools/transfer/: README.md  XN_SAMPLE_transform_cols.txt  compute_transformation.py  debug_config.py  environment.yml  requirements.txt  transform.py  transform_impedance.py  transform_xnsample.py
sysmexcbctools/transfer/config/: __init__.py  config_loader.py  data_paths.yaml
sysmexcbctools/transfer/flow_gates/: PLTF_gates.pkl  README.md  RET_gates.pkl  WDF_gates.pkl  WNR_gates.pkl
sysmexcbctools/transfer/flow_gates/json_gates/: PLTF_gates.json  RET_gates.json  WDF_gates.json  WNR_gates.json
sysmexcbctools/transfer/sysmexalign/: __init__.py  alignment_1d.py  api.py  flow_gating_pipeline.py  gate_utils.py  gmm_ot.py  load_and_preprocess.py
sysmexcbctools/transfer/utils/: __init__.py  data_loader.py
