[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sysmexcbctools"
version = "0.1.0"
description = "Toolkit for processing and analysing Sysmex CBC data"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Daniel Kreuter"},
]
keywords = [
    "sysmex",
    "haematology",
    "cbc",
    "data-cleaning",
    "optimal-transport",
    "gam",
    "domain-adaptation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyyaml>=5.4.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
data = [
    "psutil>=5.8.0",
]

transfer = [
    "scipy>=1.5.0",
    "scikit-learn>=0.24.0",
    "matplotlib>=3.3.0",
    "joblib>=1.0.0",
    "POT>=0.8.0",
    "flowio>=1.0.0",
]

correction = [
    "scipy>=1.5.0",
    "pygam>=0.8.0",
    "joblib>=1.0.0",
]

disae2 = [
    "torch>=1.8.0",
    "scikit-learn>=0.24.0",
]

notebooks = [
    "jupyter>=1.0.0",
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0",
    "ipywidgets>=7.0",
    "SciencePlots>=2.0.0",
    "phate>=1.0.0",
]

all = [
    "sysmexcbctools[data,transfer,correction,disae2,notebooks]",
]

dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "hypothesis>=6.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

memory = [
    "dask[dataframe]>=2021.3.0",
    "pyarrow>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/danielkreuter/SysmexCBCTools"
Documentation = "https://github.com/danielkreuter/SysmexCBCTools"
Repository = "https://github.com/danielkreuter/SysmexCBCTools"

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.package-data]
sysmexcbctools = ["**/*.yaml", "**/*.yml"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "NPY201"]
ignore = []
extend-select = ["I"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "sysmexcbctools.transfer.*"
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["sysmexcbctools"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
